let value be displayed

--- a/public/create.html
+++ b/public/create.html
@@ -136,7 +136,7 @@
 
             <div class="col s1 m3 l4">
               <label>Strength</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" valu=1 id="attrSt" min="0" max="24">
+              <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrSt" min="0" max="24">
             </div>
 
 
