--- a/public/create.html
+++ b/public/create.html
@@ -18,6 +18,10 @@
     background-color: #1976d2;
     }
   </style>
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
