--- a/public/create.html
+++ b/public/create.html
@@ -82,14 +82,14 @@
 
           <div class="row">
             <div class="input-field col s12">
-              <textarea id="character_description" class="materialize-textarea"></textarea>
+              <textarea id="character_description" class="materialize-textarea" placeholder="Quick description of your character"></textarea>
               <label for="textarea1">Description</label>
             </div>
           </div>
 
           <div class="row">
             <div class="input-field col s12">
-              <textarea id="character_background" class="materialize-textarea"></textarea>
+              <textarea id="character_background" class="materialize-textarea" placeholder="Your character's full backstory"></textarea>
               <label for="textarea2">Background</label>
             </div>
           </div>
@@ -105,205 +105,208 @@
         </form>
       </div>
     </div>
-    <!--   Characteristics Section   -->
-    <div class="section">
-      <h2>Attributes</h2>
-      <div class="row">
-        <form class="col s12">
-          <div class="row">
-
-            <div class="col s1 m3 l4">
-              <label>Awareness</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrAw" min="0" max="24">
-            </div>
-
-            <div class="col s1 m3 l4">
-              <label>Coordination</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrCo" min="0" max="24">
-            </div>
-
-            <div class="col s1 m3 l4">
-              <label>Ingenuity</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrIn" min="0" max="24">
-            </div>
-
-            <div class="col s1 m3 l4">
-              <label>Presence</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrPr" min="0" max="24">
-            </div>
-
-
-            <div class="col s1 m3 l4">
-              <label>Resolve</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrRe" min="0" max="24">
-            </div>
-
-            <div class="col s1 m3 l4">
-              <label>Strength</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrSt" min="0" max="24">
-            </div>
-
-
-          </div>
-
-        </form>
-
-      </div>
-      <!------- Traits Section-------->
-
+    <div class="">
+      <!--   Characteristics Section   -->
       <div class="section">
-        <h2>Traits</h2>
+        <h2>Attributes</h2>
+        <h6><span id="characterPoints">18</span> Character Points left!</h6>
         <div class="row">
           <form class="col s12">
             <div class="row">
-
-              <div class="col s1 m3 l3">
-                <label>Trait 1</label>
-                <div class="switch">
-                  <label>
-                    Off
-                    <input type="checkbox" class="blue darken-4" unchecked id="trait">
-                    <span class="lever blue darken-4"></span>
-                    On
-                  </label>
-                </div>
+  
+              <div class="col s1 m3 l4">
+                <label>Awareness</label>
+                <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrAw" min="0" max="24">
               </div>
-
-              <div class="col s1 m3 l3">
-                <label>Trait 1</label>
-                <div class="switch">
-                  <label>
-                    Off
-                    <input type="checkbox" class="blue darken-4" unchecked id="trait2">
-                    <span class="lever blue darken-4"></span>
-                    On
-                  </label>
-                </div>
+  
+              <div class="col s1 m3 l4">
+                <label>Coordination</label>
+                <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrCo" min="0" max="24">
               </div>
-
-              <div class="col s1 m3 l3">
-                <label>Trait 1</label>
-                <div class="switch"><label>Off<input type="checkbox" class="blue darken-4" unchecked>
-                    <span class="lever blue darken-4"></span>On</label></div>
+  
+              <div class="col s1 m3 l4">
+                <label>Ingenuity</label>
+                <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrIn" min="0" max="24">
               </div>
-
-              <div class="col s1 m3 l3">
-                <label>Trait 1</label>
-                <div class="switch"><label>Off<input type="checkbox" class="blue darken-4" unchecked>
-                    <span class="lever blue darken-4"></span>On</label></div>
+  
+              <div class="col s1 m3 l4">
+                <label>Presence</label>
+                <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrPr" min="0" max="24">
               </div>
-
-              <div class="col s1 m3 l3">
-                <label>Trait 1</label>
-                <div class="switch"><label>Off<input type="checkbox" class="blue darken-4" unchecked>
-                    <span class="lever blue darken-4"></span>On</label></div>
+  
+  
+              <div class="col s1 m3 l4">
+                <label>Resolve</label>
+                <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrRe" min="0" max="24">
               </div>
-
-              <div class="col s1 m3 l3">
-                <label>Trait 1</label>
-                <div class="switch"><label>Off<input type="checkbox" class="blue darken-4" unchecked>
-                    <span class="lever blue darken-4"></span>On</label></div>
+  
+              <div class="col s1 m3 l4">
+                <label>Strength</label>
+                <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrSt" min="0" max="24">
               </div>
-
-              <div class="col s1 m3 l3">
-                <label>Trait 1</label>
-                <div class="switch"><label>Off<input type="checkbox" class="blue darken-4" unchecked>
-                    <span class="lever blue darken-4"></span>On</label></div>
-              </div>
-
-              <div class="col s1 m3 l3">
-                <label>Trait 1</label>
-                <div class="switch"><label>Off<input type="checkbox" class="blue darken-4" unchecked>
-                    <span class="lever blue darken-4"></span>On</label></div>
-              </div>
-
-
-
-
+  
+  
             </div>
-
+  
           </form>
+  
         </div>
+        <!------- Traits Section-------->
+  
+        <div class="section">
+          <h2>Traits</h2>
+          <h6><span id="characterPoints2">18</span> Character Points left!</h6>
+          <div class="row">
+            <form class="col s12">
+              <div class="row">
+  
+                <div class="col s1 m3 l3">
+                  <label>Trait 1</label>
+                  <div class="switch">
+                    <label>
+                      Off
+                      <input type="checkbox" class="blue darken-4" unchecked id="trait">
+                      <span class="lever blue darken-4"></span>
+                      On
+                    </label>
+                  </div>
+                </div>
+  
+                <div class="col s1 m3 l3">
+                  <label>Trait 1</label>
+                  <div class="switch">
+                    <label>
+                      Off
+                      <input type="checkbox" class="blue darken-4" unchecked id="trait2">
+                      <span class="lever blue darken-4"></span>
+                      On
+                    </label>
+                  </div>
+                </div>
+  
+                <div class="col s1 m3 l3">
+                  <label>Trait 1</label>
+                  <div class="switch"><label>Off<input type="checkbox" class="blue darken-4" unchecked>
+                      <span class="lever blue darken-4"></span>On</label></div>
+                </div>
+  
+                <div class="col s1 m3 l3">
+                  <label>Trait 1</label>
+                  <div class="switch"><label>Off<input type="checkbox" class="blue darken-4" unchecked>
+                      <span class="lever blue darken-4"></span>On</label></div>
+                </div>
+  
+                <div class="col s1 m3 l3">
+                  <label>Trait 1</label>
+                  <div class="switch"><label>Off<input type="checkbox" class="blue darken-4" unchecked>
+                      <span class="lever blue darken-4"></span>On</label></div>
+                </div>
+  
+                <div class="col s1 m3 l3">
+                  <label>Trait 1</label>
+                  <div class="switch"><label>Off<input type="checkbox" class="blue darken-4" unchecked>
+                      <span class="lever blue darken-4"></span>On</label></div>
+                </div>
+  
+                <div class="col s1 m3 l3">
+                  <label>Trait 1</label>
+                  <div class="switch"><label>Off<input type="checkbox" class="blue darken-4" unchecked>
+                      <span class="lever blue darken-4"></span>On</label></div>
+                </div>
+  
+                <div class="col s1 m3 l3">
+                  <label>Trait 1</label>
+                  <div class="switch"><label>Off<input type="checkbox" class="blue darken-4" unchecked>
+                      <span class="lever blue darken-4"></span>On</label></div>
+                </div>
+  
+  
+  
+  
+              </div>
+  
+            </form>
+          </div>
+    </div>
         <!------- Attributes Section ------>
 
-        <div class="section">
+        <div class="section ">
           <h2>Skills</h2>
+          <h6><span id="skillzPoints">18</span> points left!</h6>
           <div class="row">
             <form class="col s12">
               <div class="row">
 
                 <div class="col s1 m3 l3">
                   <label>Athletics</label>
-                  <input oninput="shareTreasure()" type="number" class="short-input" placeholder="SP" id="skAthletics"
-                    min="0" max="24">
-                </div>
-
-                <div class="col s1 m3 l3">
-                  <label>Convince</label>
-                  <input oninput="shareTreasure()" type="number" class="short-input" placeholder="SP" id="skConvince"
-                    min="0" max="24">
-                </div>
-
-                <div class="col s1 m3 l3">
-                  <label>Craft</label>
-                  <input oninput="shareTreasure()" type="number" class="short-input" placeholder="SP" id="skCraft" min="0"
+                  <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skAthletics" min="0"
                     max="24">
                 </div>
 
                 <div class="col s1 m3 l3">
+                  <label>Convince</label>
+                  <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skConvince" min="0"
+                    max="24">
+                </div>
+
+                <div class="col s1 m3 l3">
+                  <label>Craft</label>
+                  <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skCraft" min="0" max="24">
+                </div>
+
+                <div class="col s1 m3 l3">
                   <label>Fighting</label>
-                  <input oninput="shareTreasure()" type="number" class="short-input" placeholder="SP" id="skFighting"
-                    min="0" max="24">
+                  <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skFighting" min="0"
+                    max="24">
                 </div>
 
 
                 <div class="col s1 m3 l3">
                   <label>Knowledge</label>
-                  <input oninput="shareTreasure()" type="number" class="short-input" placeholder="SP" id="skKnowledge"
-                    min="0" max="24">
+                  <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skKnowledge" min="0"
+                    max="24">
                 </div>
 
                 <div class="col s1 m3 l3">
                   <label>Marksman</label>
-                  <input oninput="shareTreasure()" type="number" class="short-input" placeholder="SP" id="skMarksman"
-                    min="0" max="24">
+                  <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skMarksman" min="0"
+                    max="24">
                 </div>
 
                 <div class="col s1 m3 l3">
                   <label>Medicine</label>
-                  <input oninput="shareTreasure()" type="number" class="short-input" placeholder="SP" id="skMedicine"
-                    min="0" max="24">
+                  <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skMedicine" min="0"
+                    max="24">
                 </div>
 
                 <div class="col s1 m3 l3">
                   <label>Science</label>
-                  <input oninput="shareTreasure()" type="number" class="short-input" placeholder="SP" id="skScience"
-                    min="0" max="24">
+                  <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skScience" min="0" max="24">
                 </div>
 
 
                 <div class="col s1 m3 l3">
                   <label>Subterfuge</label>
-                  <input oninput="shareTreasure()" type="number" class="short-input" placeholder="SP" id="skSubterfuge"
-                    min="0" max="24">
+                  <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skSubterfuge" min="0"
+                    max="24">
                 </div>
 
                 <div class="col s1 m3 l3">
                   <label>Survival</label>
-                  <input oninput="shareTreasure()" type="number" class="short-input" placeholder="SP" id="skSurvival"
-                    min="0" max="24">
+                  <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skSurvival" min="0"
+                    max="24">
                 </div>
 
                 <div class="col s1 m3 l3">
                   <label>Technology</label>
-                  <input oninput="shareTreasure()" type="number" class="short-input" placeholder="SP" id="skTechnology"
-                    min="0" max="24">
+                  <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skTechnology" min="0"
+                    max="24">
                 </div>
 
                 <div class="col s1 m3 l3">
                   <label>Transport</label>
-                  <input oninput="shareTreasure()" type="number" class="short-input" placeholder="SP" id="skTransport"
-                    min="0" max="24">
+                  <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skTransport" min="0"
+                    max="24">
                 </div>
 
 
@@ -315,7 +318,7 @@
           <div class="row">
             <div class="col s12 offset-s9 ms6 offset-s7 l12 offset-l10">
               <br>
-              <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+              <button class="btn waves-effect waves-light blue darken-4" type="submit" name="action">Submit
                 <i class="material-icons right">send</i>
               </button>
             </div>
