--- a/public/create.html
+++ b/public/create.html
@@ -158,7 +158,7 @@
           <h6><span id="characterPoints2">18</span> Character Points left!</h6>
           <div class="row">
             <form class="col s12">
-              <div class="row">
+              <div class="row" id="traitsHere">
   
                 <div class="col s1 m3 l3">
                   <label>Trait 1</label>
@@ -352,6 +352,8 @@
       <!--JavaScript at end of body for optimized loading-->
       <!-- Compiled and minified JavaScript -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="js/loadTraits.js"></script>
 </body>
 
 </html>
