--- a/public/index.html
+++ b/public/index.html
@@ -36,10 +36,16 @@
             <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
-    <h1>hi</h1>
+    <div class="container" id="charsHere">
+
+    </div>
+
     <!--JavaScript at end of body for optimized loading-->
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/loadChars.js"></script>
+
 </body>
 
 </html>
