added jQuery for getting the data in the form

--- a/public/create.html
+++ b/public/create.html
@@ -228,7 +228,7 @@
             </form>
           </div>
     </div>
-        <!------- Attributes Section ------>
+        <!------- Skills Section ------>
 
         <div class="section ">
           <h2>Skills</h2>
