--- a/public/create.html
+++ b/public/create.html
@@ -37,7 +37,7 @@
       <ul id="nav-mobile" class="sidenav">
         <li><a href="#">Create a Character</a></li>
         <li><a href="#">Your Character</a></li>
-        <li><a href="#">Created Characters</a></li>
+        <li><a href="/">Created Characters</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
