--- a/public/characters.html
+++ b/public/characters.html
@@ -22,6 +22,20 @@
 
 <body>
 
+    <nav class=" light-blue darken-4 " role="navigation">
+        <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">The What?</a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="/character/create">Create a Character</a></li>
+                <li><a href="/">Created Characters</a></li>
+            </ul>
+    
+            <ul id="nav-mobile" class="sidenav">
+                <li><a href="/character/create">Create a Character</a></li>
+                <li><a href="/">Created Characters</a></li>
+            </ul>
+            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        </div>
+    </nav>
     <!--JavaScript at end of body for optimized loading-->
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
