--- a/public/create.html
+++ b/public/create.html
@@ -28,20 +28,18 @@
 
   <nav class=" light-blue darken-4 " role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">The What?</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Create a Character</a></li>
-        <li><a href="#">Your Character</a></li>
-        <li><a href="#">Created Characters</a></li>
-      </ul>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="/character/create">Create a Character</a></li>
+            <li><a href="/">Created Characters</a></li>
+        </ul>
 
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Create a Character</a></li>
-        <li><a href="#">Your Character</a></li>
-        <li><a href="#">Created Characters</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul id="nav-mobile" class="sidenav">
+            <li><a href="/character/create">Create a Character</a></li>
+            <li><a href="/">Created Characters</a></li>
+        </ul>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
-  </nav>
+</nav>
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
