--- a/public/characters.html
+++ b/public/characters.html
@@ -21,8 +21,22 @@
 </head>
 
 <body>
-
     <nav class=" light-blue darken-4 " role="navigation">
+        <div class="nav-wrapper">
+          <a href="/" class="brand-logo">The What?</a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="/character/create">Create a Character</a></li>
+            <li><a href="/">Created Characters</a></li>
+          </ul>
+        </div>
+      </nav>
+    
+      <ul class="sidenav" id="mobile-demo">
+        <li><a href="/character/create">Create a Character</a></li>
+            <li><a href="/">Created Characters</a></li>
+      </ul>
+    <!-- <nav class=" light-blue darken-4 " role="navigation">
         <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">The What?</a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="/character/create">Create a Character</a></li>
@@ -35,10 +49,14 @@
             </ul>
             <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
-    </nav>
+    </nav> -->
+
+    
     <!--JavaScript at end of body for optimized loading-->
     <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
