--- a/public/index.html
+++ b/public/index.html
@@ -23,19 +23,20 @@
 <body>
 
     <nav class=" light-blue darken-4 " role="navigation">
-        <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">The What?</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="/character/create">Create a Character</a></li>
-                <li><a href="/">Created Characters</a></li>
-            </ul>
-
-            <ul id="nav-mobile" class="sidenav">
-                <li><a href="/character/create">Create a Character</a></li>
-                <li><a href="/">Created Characters</a></li>
-            </ul>
-            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <div class="nav-wrapper">
+          <a href="/" class="brand-logo">The What?</a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="/character/create">Create a Character</a></li>
+            <li><a href="/">Created Characters</a></li>
+          </ul>
         </div>
-    </nav>
+      </nav>
+    
+      <ul class="sidenav" id="mobile-demo">
+        <li><a href="/character/create">Create a Character</a></li>
+            <li><a href="/">Created Characters</a></li>
+      </ul>
     <div class="container" id="charsHere">
 
     </div>
