--- a/public/create.html
+++ b/public/create.html
@@ -12,6 +12,7 @@
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Create Your Character</title>
 
   <style>
     .switch label input[type=checkbox]:checked+.lever:after {
@@ -20,8 +21,8 @@
   </style>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -29,15 +30,13 @@
   <nav class=" light-blue darken-4 " role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">The What?</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Create a Character</a></li>
-        <li><a href="#">Your Character</a></li>
-        <li><a href="#">Created Characters</a></li>
+        <li><a href="">Create a Character</a></li>
+        <li><a href="/">Created Characters</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Create a Character</a></li>
-        <li><a href="#">Your Character</a></li>
-        <li><a href="#">Created Characters</a></li>
+        <li><a href="">Create a Character</a></li>
+        <li><a href="/">Created Characters</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -67,7 +66,7 @@
         <form class="col s12">
           <div class="row">
             <div class="input-field col s12">
-              <input placeholder="Zargon The Destroyer" id="first_name" type="text" class="validate">
+              <input placeholder="Rose Tyler" id="first_name" type="text" class="validate">
               <label for="character_name">Character Name</label>
             </div>
           </div>
@@ -96,7 +95,7 @@
 
           <div class="row">
             <div class="input-field col s12">
-              <input placeholder="Alejandro" id="player_name" type="text" class="validate">
+              <input placeholder="Amelia" id="player_name" type="text" class="validate">
               <label for="player_name">Player Name</label>
             </div>
           </div>
@@ -339,7 +338,7 @@
       <div class="row">
         <div class="col s12 offset-s9 ms6 offset-s7 l12 offset-l10">
           <br>
-          <button class="btn waves-effect waves-light blue darken-4" type="submit" name="action">Submit
+          <button class="btn waves-effect waves-light blue darken-4" type="submit" name="action" id="submit">Submit
             <i class="material-icons right">send</i>
           </button>
         </div>
@@ -374,7 +373,166 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="js/loadTraits.js"></script>
+  <!-- <script src="./js/index.js"></script> -->
+  <!-- <script src="js/loadTraits.js"></script> -->
+  <script type="text/javascript">
+    function createTrait(info) {
+      var newTrait = $("<div>").addClass("col s1 m3");
+      var mainLabel = $("<label>").html(info.name);
+      var switchDiv = $("<div>").addClass("switch");
+      var subLabel = $("<label>");
+      var traitInput = "<input type='checkbox' class='blue darken-4' unchecked id='trait" + info.id + "' cost='" + info.cost + "' data-id='" + info.id + "'/>";
+      //console.log(info.cost);
+      var lever = $("<span>").addClass("lever blue darken-4");
+      subLabel.append("Off", traitInput, lever, "On");
+      switchDiv.append(subLabel);
+      newTrait.append(mainLabel, switchDiv);
+      return newTrait;
+    };
+
+    function loadAllTraits() {
+      $.ajax({
+        method: "GET",
+        url: "/api/static/traits"
+      }).then(function (data) {
+        // loop through all traits
+        var testTrait = {
+          name: "Test Trait",
+          id: 0,
+          cost: 5
+        };
+        var testTraitttt = createTrait(testTrait);
+        for (var i = 0; i < data.length; i++) {
+          var newTrait = createTrait(data[i]);
+          $("#traitsHere").append(newTrait);
+        };
+        $("#traitsHere").append(testTraitttt);
+      });
+    };
+
+    $(document).ready(function () {
+      loadAllTraits();
+    });
+
+    var formSubmit = function (event) {
+      event.preventDefault();
+
+      // Creation of object to pass to POST URLs
+      // TODO create reference for stuff
+      var characterBase = {
+        "playerName": $("#player_name").val().trim(),
+        "charName": $("#first_name").val().trim(),
+        "image": $("#character_image").val().trim(),
+        "description": $("#character_description").val().trim(),
+        "background": $("#character_background").val().trim(),
+        "stuff": "stuff"
+      };
+      $.ajax({
+        headers: {
+          "Content-Type": "application/json"
+        },
+        type: "POST",
+        url: "api/characters/characters",
+        data: JSON.stringify(charTraits)
+      }).then(function (skillzData) {
+        console.log("Basic Info sent to database!");
+      });
+
+      // TODO: correct references
+      var charAttributes = {
+        "attrAwMax": $("attrAw").val(),
+        "attrAwCurr": $("attrAw").val(),
+        "attrCoMax": $("attrCo").val(),
+        "attrCoCurr": $("attrCo").val(),
+        "attrInMax": $("attrIn").val(),
+        "attrInCurr": $("attrIn").val(),
+        "attrPrMax": $("attrPr").val(),
+        "attrPrCurr": $("attrPr").val(),
+        "attrReMax": $("attrRe").val(),
+        "attrReCurr": $("attrRe").val(),
+        "attrStMax": $("attrSt").val(),
+        "attrStCurr": $("attrSt").val()
+      };
+      $.ajax({
+        headers: {
+          "Content-Type": "application/json"
+        },
+        type: "POST",
+        url: "api/characters/attributes",
+        data: JSON.stringify(charTraits)
+      }).then(function (skillzData) {
+        console.log("Attributes sent to database!");
+      });
+
+      // TODO: correct reference
+      var charSkillz = {
+        "skAthletics": $("#skAthletics").val(),
+        "skConvince": $("#skConvince").val(),
+        "skCraft": $("#skCraft").val(),
+        "skFighting": $("#skFighting").val(),
+        "skKnowledge": $("#skKnowledge").val(),
+        "skMarksman": $("#skMarksman").val(),
+        "skMedicine": $("#skMedicine").val(),
+        "skScience": $("#skScience").val(),
+        "skSubterfuge": $("#skSubterfuge").val(),
+        "skSurvival": $("#skSurvival").val(),
+        "skTechnology": $("#skTechnology").val(),
+        "skTransport": $("#skTransport").val()
+      };
+      $.ajax({
+        headers: {
+          "Content-Type": "application/json"
+        },
+        type: "POST",
+        url: "api/characters/skills",
+        data: JSON.stringify(charTraits)
+      }).then(function (skillzData) {
+        console.log("Skills sent to database!");
+      });
+
+      // Format and load all of the trait that the player checked off
+      var charTraits = {
+        "trait1": 0,
+        "trait2": 0,
+        "trait3": 0,
+        "trait4": 0,
+        "trait5": 0,
+        "trait6": 0,
+        "trait7": 0,
+        "trait8": 0,
+        "trait9": 0,
+        "trait10": 0,
+        "trait11": 0,
+        "trait12": 0
+      };
+      var count = 1;
+      $("input:checked").each(function () {
+        if (count <= 12) {
+          var temp = "trait" + count;
+          charTraits[temp] = parseInt($(this).attr("data-id"));
+          count++;
+        }
+      });
+      $.ajax({
+        headers: {
+          "Content-Type": "application/json"
+        },
+        type: "POST",
+        url: "api/characters/traits",
+        data: JSON.stringify(charTraits)
+      }).then(function (data) {
+        console.log("Traits sent to database!");
+      });
+     // window.open('https://the-what.herokuapp.com/');
+
+    };
+    $("#submit").on("click", formSubmit);
+    
+
+    function shareTreasure() {
+      console.log("hi");
+    }
+  </script>
 </body>
 
 </html>
