--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
 
-
+    <title>Doctor Who RPG Character Sheet Creator</title>
 
 
     <!--Let browser know website is optimized for mobile-->
