--- a/public/create.html
+++ b/public/create.html
@@ -115,33 +115,33 @@
 
             <div class="col s1 m3 l4">
               <label>Awareness</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrAw" min="0" max="24">
+              <input oninput="controller()" type="number" class="short-input" value=0 id="attrAw" min="0" max="24">
             </div>
 
             <div class="col s1 m3 l4">
               <label>Coordination</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrCo" min="0" max="24">
+              <input oninput="controller()" type="number" class="short-input" value=0 id="attrCo" min="0" max="24">
             </div>
 
             <div class="col s1 m3 l4">
               <label>Ingenuity</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrIn" min="0" max="24">
+              <input oninput="controller()" type="number" class="short-input" value=0 id="attrIn" min="0" max="24">
             </div>
 
             <div class="col s1 m3 l4">
               <label>Presence</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrPr" min="0" max="24">
+              <input oninput="controller()" type="number" class="short-input" value=0 id="attrPr" min="0" max="24">
             </div>
 
 
             <div class="col s1 m3 l4">
               <label>Resolve</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrRe" min="0" max="24">
+              <input oninput="controller()" type="number" class="short-input" value=0 id="attrRe" min="0" max="24">
             </div>
 
             <div class="col s1 m3 l4">
               <label>Strength</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=1 id="attrSt" min="0" max="24">
+              <input oninput="controller()" type="number" class="short-input" value=0 id="attrSt" min="0" max="24">
             </div>
 
 
@@ -176,64 +176,64 @@
 
             <div class="col s1 m3 l3">
               <label>Athletics</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skAthletics" min="0" max="24">
+              <input oninput="controller2()" type="number" class="short-input" value=0 id="skAthletics" min="0" max="24">
             </div>
 
             <div class="col s1 m3 l3">
               <label>Convince</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skConvince" min="0" max="24">
+              <input oninput="controller2()" type="number" class="short-input" value=0 id="skConvince" min="0" max="24">
             </div>
 
             <div class="col s1 m3 l3">
               <label>Craft</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skCraft" min="0" max="24">
+              <input oninput="controller2()" type="number" class="short-input" value=0 id="skCraft" min="0" max="24">
             </div>
 
             <div class="col s1 m3 l3">
               <label>Fighting</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skFighting" min="0" max="24">
+              <input oninput="controller2()" type="number" class="short-input" value=0 id="skFighting" min="0" max="24">
             </div>
 
 
             <div class="col s1 m3 l3">
               <label>Knowledge</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skKnowledge" min="0" max="24">
+              <input oninput="controller2()" type="number" class="short-input" value=0 id="skKnowledge" min="0" max="24">
             </div>
 
             <div class="col s1 m3 l3">
               <label>Marksman</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skMarksman" min="0" max="24">
+              <input oninput="controller2()" type="number" class="short-input" value=0 id="skMarksman" min="0" max="24">
             </div>
 
             <div class="col s1 m3 l3">
               <label>Medicine</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skMedicine" min="0" max="24">
+              <input oninput="controller2()" type="number" class="short-input" value=0 id="skMedicine" min="0" max="24">
             </div>
 
             <div class="col s1 m3 l3">
               <label>Science</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skScience" min="0" max="24">
+              <input oninput="controller2()" type="number" class="short-input" value=0 id="skScience" min="0" max="24">
             </div>
 
 
             <div class="col s1 m3 l3">
               <label>Subterfuge</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skSubterfuge" min="0" max="24">
+              <input oninput="controller2()" type="number" class="short-input" value=0 id="skSubterfuge" min="0" max="24">
             </div>
 
             <div class="col s1 m3 l3">
               <label>Survival</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skSurvival" min="0" max="24">
+              <input oninput="controller2()" type="number" class="short-input" value=0 id="skSurvival" min="0" max="24">
             </div>
 
             <div class="col s1 m3 l3">
               <label>Technology</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skTechnology" min="0" max="24">
+              <input oninput="controller2()" type="number" class="short-input" value=0 id="skTechnology" min="0" max="24">
             </div>
 
             <div class="col s1 m3 l3">
               <label>Transport</label>
-              <input oninput="shareTreasure()" type="number" class="short-input" value=0 id="skTransport" min="0" max="24">
+              <input oninput="controller2()" type="number" class="short-input" value=0 id="skTransport" min="0" max="24">
             </div>
 
 
@@ -245,7 +245,7 @@
       <div class="row">
         <div class="col s12 offset-s9 ms6 offset-s7 l12 offset-l10">
           <br>
-          <button class="btn waves-effect waves-light blue darken-4" type="submit" name="action" id="submit">Submit
+          <button onclick="saveCharacter()" class="btn waves-effect waves-light blue darken-4" type="submit" name="action" id="submit">Submit
             <i class="material-icons right">send</i>
           </button>
         </div>
@@ -282,6 +282,8 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="js/create.js"></script>
+
   <!-- <script src="./js/index.js"></script> -->
   <!-- <script src="js/loadTraits.js"></script> -->
   <script type="text/javascript">
@@ -290,7 +292,7 @@
       var mainLabel = $("<label>").html(info.name);
       var switchDiv = $("<div>").addClass("switch");
       var subLabel = $("<label>");
-      var traitInput = "<input type='checkbox' class='blue darken-4' unchecked id='trait" + info.id + "' cost='" + info.cost + "' data-id='" + info.id + "'/>";
+      var traitInput = "<input oninput='controller()' type='checkbox' class='blue darken-4' unchecked id='trait" + info.id + "' cost='" + info.cost + "' data-id='" + info.id + "'/>";
       //console.log(info.cost);
       var lever = $("<span>").addClass("lever blue darken-4");
       subLabel.append("Off", traitInput, lever, "On");
@@ -410,7 +412,7 @@
         "trait7": 0,
         "trait8": 0,
         "trait9": 0,
-        "trait10": 0,
+        "trait10": 0, 
         "trait11": 0,
         "trait12": 0
       };
@@ -438,9 +440,6 @@
     $("#submit").on("click", formSubmit);
     
 
-    function shareTreasure() {
-      console.log("hi");
-    }
   </script>
 </body>
 
