--- a/public/create.html
+++ b/public/create.html
@@ -270,7 +270,7 @@
             <div class="container">
               Check us out on <a class=" text-lighten-3" href="https://github.com/a2sandoval/Project2">Github</a>
               <br>
-              Check us out on Heroku <a class=" text-lighten-3" href="https://the-what.herokuapp.com/">Heroku</a>
+              Check us out on  <a class=" text-lighten-3" href="https://the-what.herokuapp.com/">Heroku</a>
             </div>
           </div>
         </div>
