--- a/public/characters.html
+++ b/public/characters.html
@@ -165,6 +165,7 @@
                         var effect = $("<p>").text(data[0].effect);
                         sec.append(title, description, effect);
                         $("#traits-here").append(sec);
+                        // This works!
                     });
                 }
             }
