Takes user back to all characters page

--- a/public/create.html
+++ b/public/create.html
@@ -432,7 +432,7 @@
             }).then(function (charData) {
               console.log("Basic Info sent to database!");
 
-              // window.open('https://the-what.herokuapp.com/');
+              window.open('https://the-what.herokuapp.com/character/' + charData.id);
             });
           });
         });
